Fix wrong size for the homepage

--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -15,8 +15,13 @@
 
     &.handwritten {
       font-family: $handwritten;
-      font-weight: 300;
     }
+  }
+}
+
+.summary {
+  p {
+    font-size: 18px;
   }
 }
 
